--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
       </div>
       <br><br><br><br>
       <div class="container">
-        <button class="btn btn-primary btn-block all_cards" id="show" >Show all cards</button>
+        <div class="row">
+            <button class="btn btn-primary btn-block all_cards col" id="show" >Show all cards</button>
+            <p class="col-sm-2 total_cards"></p>
+        </div>
         <div class="form-group" style="text-align: left;">
             <input type="text" id="name" class="form-control" placeholder="Search by name">
         </div>
